[gd_scene load_steps=7 format=3 uid="uid://csyfhkjha6t36"]

[ext_resource type="Script" path="res://modules/login/login.gd" id="1_k0avt"]
[ext_resource type="LabelSettings" uid="uid://cn1sxou71yp4n" path="res://themes/title.tres" id="1_nvu21"]
[ext_resource type="Shader" path="res://modules/login/login.gdshader" id="2_2sspy"]
[ext_resource type="Texture2D" uid="uid://dx2tkr1bbfa6f" path="res://assets/textures/screen/logo.png" id="3_lwk67"]
[ext_resource type="PackedScene" uid="uid://c3gvwja61h68n" path="res://modules/http/http.tscn" id="4_jy780"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nnvmr"]
shader = ExtResource("2_2sspy")

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0avt")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nnvmr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.172549, 0.313726, 1)

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(119.5, 24.4375)
scale = Vector2(0.248958, 0.219308)
texture = ExtResource("3_lwk67")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 32.0
offset_right = 33.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Iniciar sesión"
label_settings = ExtResource("1_nvu21")

[node name="Email" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -16.5
offset_right = 79.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
placeholder_text = "Correo"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = 7.5
offset_right = 79.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
placeholder_text = "Contraseña"
secret = true

[node name="LoginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = 30.5
offset_right = 23.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "Iniciar Sesión"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -32.0
offset_right = 40.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -5

[node name="Register" type="Button" parent="OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "¿No tienes cuenta? Registrate"
flat = true

[node name="Button2" type="Button" parent="OptionsContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "¿Olvidaste tú contraseña?"
flat = true

[node name="Http" parent="." instance=ExtResource("4_jy780")]
endpoint = "/auth/sign-in"
http_method = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 213.0
offset_top = 143.0
offset_right = 239.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 5
text = "Volver"
flat = true

[connection signal="pressed" from="OptionsContainer/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
